# wasm-udf

./: .gitignore  Cargo.toml  README.md  makefile.toml
my_udf/: Cargo.toml
my_udf/src/: lib.rs
src/: main.rs  utils.rs
wasm-component/: Cargo.toml
wasm-component/src/: lib.rs
wit/: udf.wit
