[package]
name = "wasm-udf"
version = "0.1.0"
edition = "2021"


[workspace]
members = ["my_udf"]

[dependencies]

wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "5b93cdb", features = [
    "component-model",
] }
# We need preview2-prototyping https://github.com/bytecodealliance/wasmtime/pull/6391
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", rev = "5b93cdb" }
async-trait = "0.1.68"
tokio = { version = "1.28.1", features = ["full"] }

arrow-array = "41.0.0"
arrow-schema = "41.0.0"
arrow-ipc = "41.0.0"
arrow = { version = "41.0.0", features = ["ffi"] }
arrow-data = "41.0.0"
arrow-buffer = "41.0.0"



[profile.release]
# 5.2M -> 4.3M
# lto = "thin"
debug = 1