[package]
name = "my_udf"
version = "0.1.0"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = "0.6.0"
arrow-array = "41.0.0"
arrow-schema = "41.0.0"
arrow-ipc = "41.0.0"
arrow = { version = "41.0.0", features = ["ffi"] }
arrow-data = "41.0.0"
arrow-buffer = "41.0.0"


[lib]
crate-type = ["cdylib"]

